--- a/page2.html
+++ b/page2.html
@@ -46,12 +46,12 @@
                                              <div class="title2">連結<span style="cursor: pointer;">V</span></div>
                                              <section class="sm"> 
                                                      <a href="#"> 副網頁1</a>
-                                                     <a href="#"> js-1</a>
+                                                     <a href="page3.html"> js-1</a>
                                                     
                                              </section>
                                              <section class="md">
                                                      <a href="#"> 副網頁1</a>
-                                                     <a href="#"> js-1</a>
+                                                     <a href="page3.html"> js-1</a>
                                                     
                                              </section>
                                  </section>
