--- a/item.html
+++ b/item.html
@@ -119,7 +119,7 @@
                                      <div id="btn3"><a href="#">觀看作品</a></div>
                       </section>
                       <section id="card5">
-                                      <div><img src="images/插圖.png"></div>
+                                      <div><img src="images/技術服務.png"></div>
                                       <h3>網頁(5)</h3>
                                       <div id="btn4"><a href="#">觀看作品</a></div>                                
                       </section>
@@ -127,7 +127,7 @@
 
 
                    <section id="ps1">
-                                 <div ><img src="images/作品-人物和風景.png" ></div>
+                                 <div ><img src="images/人物和風景-Mockup.jpg" ></div>
                                  <h3>製作軟體PS(編號P1)</h3>
                    </section>
                    <section id="ps2">
@@ -141,7 +141,7 @@
                              <h3>製作軟體PS(編號P3)-三角測量</h3>
                    </section>
                    <section id="ps4">
-                             <div><img src="images/作品(濾鏡).jpg"></div>
+                             <div><img src="images/濾鏡-Mockup.jpg"></div>
                              <h3>製作軟體PS(編號P4)-彩色素描</h3>
                    </section>
                    <section id="ps5">
