--- a/item.html
+++ b/item.html
@@ -79,7 +79,7 @@
                                 <h1>UI使用者介面設計</h1>
                                 <hr style="background-color:#2196f3;"></hr>
                                 <p>先確認網頁的使用者是誰,再來選定顏色和字體,
-                                   決定網頁上要放那些資訊,介面設計上一般都是由文字和圖片所構成的!
+                                   決定網頁上要放那些資訊,靜態網頁介面設計上一般都是由文字和圖片所構成的!
                                    為了讓觀看網頁者方便閱讀,因此怎樣的排版比較好也要思考!
                                    UI也很注重整體網頁的美觀!
                                    
@@ -88,7 +88,7 @@
                        <section>
                                <h1>網頁製作</h1>
                                <hr style="background-color:#2196f3;"></hr>
-                               <p>網頁介面設計完成後,再用Wordpress把成品完成,像這個形象網頁就是自已架設的作品!
+                               <p>網頁介面設計完成後,再把成品完成!
                               </p>
                       </section> 
                </div>
