--- a/item.html
+++ b/item.html
@@ -54,7 +54,7 @@
                               
                                <div><img src="images/服務內容-橫幅廣告.png"></div>
                                <div><figcaption>網頁設計</figcaption></div>
-                               <div><p>使用ps修改照片,ai畫向量圖,xd畫介面設計圖</p></div>
+                               <div><p></p></div>
                                
 
                        </figure>
