--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>rwd響應式網頁-作品</title>
+  <title>UI-作品</title>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="這是一個響應式網頁的作品">  
+    <meta name="description" content="這是一個UI的作品">  
    <link rel="stylesheet" type="text/css" href="css/style1.css">
   
     <script src="js/jquery-3.4.0.min.js"></script>
