--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UI-作品</title>
+  <title>rwd響應式網頁-作品</title>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="這是一個UI的作品">  
+    <meta name="description" content="這是一個響應式網頁的作品">  
    <link rel="stylesheet" type="text/css" href="css/style1.css">
   
     <script src="js/jquery-3.4.0.min.js"></script>
@@ -29,16 +29,16 @@
 
                 </section>
                 <section>
-                          <h2><a href="#" style="color:black;text-decoration: none;">關於我們</a></h2>
+                          <h2><a href="#box2" style="color:black;text-decoration: none;">關於我們</a></h2>
                 </section>
                 <section>
-                           <h2><a href="#" style="color:black;text-decoration: none;">產品</a></h2>
+                           <h2><a href="product.html" style="color:black;text-decoration: none;">產品</a></h2>
                 </section>
                 <section>
-                            <h2><a href="#" style="color:black;text-decoration: none;">服務</a></h2>
+                            <h2><a href="#box4" style="color:black;text-decoration: none;">服務</a></h2>
                 </section>
                 <section>
-                              <h2><a href="#" style="color:black;text-decoration: none;">聯絡我們</a></h2>
+                              <h2><a href="#box5" style="color:black;text-decoration: none;">聯絡我們</a></h2>
                 </section>
               </div>
                 
