--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <h2>聯絡資訊</h2>
 
                              <div><img src="images/phone-solid.svg" style="width:16px;height:16px;"><span>0974123456</span></div>
-                             <div><img src="images/location-dot-solid.svg" style="width:16px;height:16px;"><span>新北市淡水區中正東路一段</span></div>
+                             <div><img src="images/location-dot-solid.svg" style="width:16px;height:16px;"><span>新北市新店區北新路一段</span></div>
                              <hr>
                             <div>
                               <div><a href="#"><img src="images/bag-shopping-solid.svg" style="width:16px;height:16px;"><h4>蝦皮</h4></a></div>
