--- a/product.html
+++ b/product.html
@@ -29,16 +29,16 @@
 
                 </section>
                 <section>
-                          <h2><a href="#index.html" style="color:black;text-decoration: none;">關於我們</a></h2>
+                          <h2><a href="index.html" style="color:black;text-decoration: none;">關於我們</a></h2>
                 </section>
                 <section>
                            <h2><a href="#" style="color:black;text-decoration: none;">產品</a></h2>
                 </section>
                 <section>
-                            <h2><a href="#index.html" style="color:black;text-decoration: none;">服務</a></h2>
+                            <h2><a href="index.html" style="color:black;text-decoration: none;">服務</a></h2>
                 </section>
                 <section>
-                              <h2><a href="#index.html" style="color:black;text-decoration: none;">聯絡我們</a></h2>
+                              <h2><a href="index.html" style="color:black;text-decoration: none;">聯絡我們</a></h2>
                 </section>
               </div>
              
