--- a/product.html
+++ b/product.html
@@ -46,9 +46,11 @@
 
 
           </nav>
-          <h3>公司產品</h3>
+        <main>
           <div id="modal">
+            
             <div>
+              <h3>公司產品</h3>
                          <div id="pic">
                                 <div>
                                      <img src="images/pexels-caio-69976.jpg"  >
@@ -71,6 +73,16 @@
       <p>咖啡對我來說有著舉足輕重的地位，必須要嚴肅認真的看待。咖啡勢必能夠左右未來。生活中，若咖啡出現了，我們就不得不考慮它出現了的事實。</p>
       <a href="#">下一個產品</a>
     </div>  
+  </main>
+  <div id="other">
+     <h3>其他熱銷產品</h3>
+     <div>
+           <a><img src="images/pexels-brigitte-tohm-429809.jpg"></a>
+           <a><img src="images/pexels-mew-wy-2910874.jpg"></a>
+           <a><img src="images/pexels-samer-daboul-1627933.jpg"></a>
+           <a><img src="images/pexels-porapak-apichodilok-373639.jpg"></a>
+     </div>
+  </div>
     <footer>Copyright2022©CHIEN-CHI.Allright reserved</footer>
     </div>
 </body>
