--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>rwd響應式網頁-作品</title>
+  <title>咖啡專賣店-作品</title>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="這是一個響應式網頁的作品">  
@@ -21,7 +21,7 @@
 
           <nav id="nav">
                 <div style="font-size: 32px;text-align: center;">
-                     LOGO
+                     咖啡專賣店
                 </div>
                 <div>
                 <section>
@@ -48,7 +48,7 @@
           <main id="main">
                <div id="box1">
 
-                 <div><h1>LOGO</h1></div>
+                 <div><h1>咖啡專賣店</h1></div>
 
                  <div><img src="images/computer-mouse-solid.svg"></div>
                  <div><img src="images/arrow-down-long-solid.svg"></div>
