--- a/servce.html
+++ b/servce.html
@@ -21,7 +21,7 @@
 
           <nav id="nav">
                 <div style="font-size: 32px;text-align: center;">
-                     LOGO
+                     咖啡專賣店
                 </div>
                 <div>
                 <section>
