--- a/servce_page1.html
+++ b/servce_page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>服務頁面-作品</title>
+  <title>服務頁面1-作品</title>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="這是一個響應式網頁的作品">  
@@ -21,7 +21,7 @@
 
           <nav id="nav">
                 <div style="font-size: 32px;text-align: center;">
-                     LOGO
+                    咖啡專賣店
                 </div>
                 <div>
                 <section>
