--- a/servce.html
+++ b/servce.html
@@ -35,7 +35,7 @@
                            <h2><a href="product.html" style="color:black;text-decoration: none;">產品</a></h2>
                 </section>
                 <section>
-                            <h2><a href="servce_page1.html" style="color:black;text-decoration: none;">服務</a></h2>
+                            <h2><a href="servce.html" style="color:black;text-decoration: none;">服務</a></h2>
                 </section>
                 <section>
                               <h2><a href="index.html" style="color:black;text-decoration: none;">聯絡我們</a></h2>
