--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           
 
           <nav id="nav">
-                <div style="font-size: 32px;text-align: center;">
+                <div style="font-size: 32px;text-align: center;margin-bottom: 10px;text-shadow: 0 0 6px #ffffff;">
                      咖啡專賣店
                 </div>
                 <div>
