--- a/product2.html
+++ b/product2.html
@@ -20,8 +20,8 @@
           
 
           <nav id="nav">
-                <div style="font-size: 32px;text-align: center;">
-                     LOGO
+            <div style="font-size: 32px;text-align: center;margin-bottom: 10px;text-shadow: 0 0 6px #ffffff;">
+                     咖啡專賣店
                 </div>
                 <div>
                 <section>
