--- a/servce_page4.html
+++ b/servce_page4.html
@@ -51,12 +51,12 @@
                   <h2>服務</h2>
                   <a href="servce.html">團購首頁</a>
                   <span>></span>
-                   <a >咖啡豆團購</a>
+                   <a>咖啡相關證照</a>
              </div>
              <div id="box23">
              <div id="box2">
                     <div><img src="images/pexels-samer-daboul-1627933.jpg"></div>
-                    <h3>咖啡豆團購</h3>
+                    <h3>咖啡相關證照</h3>
                     <p> 對於團購，我們不能不去想，卻也不能走火入魔。做好團購這件事，可以說已經成為了全民運動。那麼，司馬光講過一段深奧的話，善治財者，養其所自來，而收其所有餘，故用之不竭，而上下交足也。這段話讓我所有的疑惑頓時豁然開朗。深入的探討團購，是釐清一切的關鍵。當你搞懂後就會明白了。而這些並不是完全重要，更加重要的問題是，在這種困難的抉擇下，本人思來想去，寢食難安。面對如此難題，我們必須設想周全。團購改變了我的命運。總結來說，可是，即使是這樣，團購的出現仍然代表了一定的意義。
                     </p>
 
