--- a/product2.html
+++ b/product2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="這是一個響應式網頁的作品">  
-   <link rel="stylesheet" type="text/css" href="css/product2.css">
+   <link rel="stylesheet" type="text/css" href="css/product.css">
   
     <script src="js/jquery-3.4.0.min.js"></script>
      <script  type="text/javascript" src="js/modal.js"></script>
