--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           
 
           <nav id="nav">
-                <div style="font-size: 32px;text-align: center;margin-bottom: 10px;text-shadow: 0 0 6px #ffffff;">
-                     咖啡專賣店
+                <div style="font-size: 32px;text-align: center;margin-bottom: 10px;text-shadow: 0 0 6px #ffffff;font-weight: bold;">
+                 咖啡專賣店
                 </div>
                 <div>
                 <section>
@@ -48,7 +48,7 @@
           <main id="main">
                <div id="box1">
 
-                 <div><h1>咖啡專賣店</h1></div>
+                 <div ><h1>咖啡專賣店</h1></div>
 
                  <div><img src="images/computer-mouse-solid.svg"></div>
                  <div><img src="images/arrow-down-long-solid.svg"></div>
