--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
           </nav>
           <main id="main">
+                <div>
                <div id="box1">
 
                  <div ><h1>咖啡專賣店</h1></div>
@@ -53,6 +54,7 @@
                  <div><img src="images/computer-mouse-solid.svg"></div>
                  <div><img src="images/arrow-down-long-solid.svg"></div>
                </div>
+              </div>
                  <div id="box2">
                        <div><h2>關於我們</h2></div>
                        <div><h3>公司沿革</h3></div>
