--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>咖啡專賣店-作品</title>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="咖啡專賣店-作品">  
+    <meta name="description" content="這是一個響應式網頁的作品">  
    <link rel="stylesheet" type="text/css" href="css/style1.css">
   
     <script src="js/jquery-3.4.0.min.js"></script>
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div>
-
-      <label for="btn" id="btn2"><img  style="width:35px;height:35px"  src="images/icon-nav.png"></label>
-          <input type="checkbox" id="btn">
+      <input type="checkbox" id="btn">
+      <label for="btn" id="btn2"><img  style="width:35px;height:35px"  src="images/icon-nav.png"><img  style="width:35px;height:35px"  src="images/icon-x.png"></label>
+         
           
 
           <nav id="nav">
