--- a/servce_page2.html
+++ b/servce_page2.html
@@ -15,8 +15,8 @@
 <body>
     <div>
 
-      <label for="btn" id="btn2"><img  style="width:35px;height:35px"  src="images/icon-nav.png"></label>
-          <input type="checkbox" id="btn">
+      <input type="checkbox" id="btn">
+      <label for="btn" id="btn2"><img  style="width:35px;height:35px"  src="images/icon-nav.png"><img  style="width:35px;height:35px"  src="images/icon-x.png"></label>
           
 
           <nav id="nav">
